Apply patch by pochini@shiny.it to fix TIFF loading on big endian, and attempt to fix saving as well by using ushort instead of messing with single bytes. Untested due to lack of hardware to test.

BUG: 269846
FIXED-IN: 3.0